fixed dn header spacing

--- a/dn/sass/_screen.scss
+++ b/dn/sass/_screen.scss
@@ -25,7 +25,7 @@ a {
 /* HEADER
 /* ======================== */
 
-h1 + h2 {
+h1 + h3 {
   margin-top: -.75em;
 }
 
